# -ai-training-platform

./: .gitignore  .train_settings.json  .ui_settings.json  README.md  main.py  make_xlsx.py  requirements.txt
annotation/: label_manager.py  labelme_io.py  mask_editor.py  mask_editor_part1.py  sam_assist.py  version_manager.py
classification/: __init__.py  dataset.py  dual_dataset.py  dual_model.py  eval.py  gradcam.py  label_manager.py  trainer.py
core/: config.py  project_manager.py
detection/: __init__.py  box_manager.py  box_overlay.py  coco_io.py  dataset.py  eval.py  trainer.py
docs/: PRD_图像分类模块.md  PRD_图像分类模块.xlsx  gen_prd_xlsx.py  merge_prd.py
inference/: cpp_backend.py  predictor.py  trt_infer.py  trt_predictor.py
inference/cpp/: CMakeLists.txt  infer.cpp
ocr/: __init__.py  engine.py  pipeline.py
ocv/: __init__.py  inspector.py
scripts/: add_cls_panels.py  add_cm.py  add_loss_curve.py  chk.py  chk_dl.py  fix_cls_display.py  fix_cls_list2.py  fix_cm.py  fix_cm_clean.py  fix_cm_click.py  fix_cm_click2.py  fix_cm_click3.py  fix_cm_direct.py  fix_cm_filter.py  fix_cm_id.py  fix_cm_offset.py  fix_cm_order.py  fix_cm_reorder.py  fix_dataset_prefix.py  fix_dup.py  fix_epoch_cb.py  fix_eval.py  fix_filter.py  fix_fullimg.py  fix_fullimg2.py  fix_fullimg3.py  fix_grey.py  fix_infer2.py  fix_infer3.py  fix_infer_route.py  fix_items.py  fix_menu.py  fix_menu2.py  fix_pad.py  fix_realtime.py  fix_set_task.py  fix_topk.py  fix_total.py  fix_train_call.py  fix_val.py  (+5 more)
training/: augment_ext.py  dataset.py  losses_ext.py  models.py  models_ext.py  trainer.py
(+4 files in other folders)
